# onnx-inference-wrapper

./: .gitignore  CMakeLists.txt  README.md
include/: DeepLabV3InferenceWrapper.h  FlowNetsInferenceWrapper.h  InferenceWrapper.h  OnnxHelper.h
include/inference_wrapper/: deeplabv3_inference_wrapper.h  flownets_inference_wrapper.h  inference_wrapper.h
model/deeplabv3/: deeplabv3_onnx_download.sh
model/flownets/: flownets_onnx_download.sh
src/: DeepLabV3InferenceWrapper.cc  FlowNetsInferenceWrapper.cc  InferenceWrapper.cc  OnnxHelper.cc  onnx_helper.cc
src/examples/: deeplabv3_inference_example.cpp  flownets_inference_example.cpp
src/inference_wrapper/: deeplabv3_inference_wrapper.cc  flownets_inference_wrapper.cc  inference_wrapper.cc
